<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.infnet.android.gerenciador_pedidos.FormularioActivity">

    <TextView
        android:id="@+id/formulario_headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:text="@string/CadastrarProduto"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/formulario_nomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/formulario_headerText"
        android:layout_alignLeft="@+id/formulario_headerText"
        android:layout_alignRight="@+id/formulario_headerText"
        android:layout_alignStart="@+id/formulario_headerText"
        android:layout_below="@+id/formulario_headerText"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/productName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/formulario_descricaoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/formulario_nomeProduto"
        android:layout_alignLeft="@+id/formulario_nomeProduto"
        android:layout_alignRight="@+id/formulario_nomeProduto"
        android:layout_alignStart="@+id/formulario_nomeProduto"
        android:layout_below="@+id/formulario_nomeProduto"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/descricaoDoProduto"
        android:inputType="textPersonName"
        android:lines="3" />

    <EditText
        android:id="@+id/formulario_Valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/preco"
        android:inputType="numberDecimal"
        android:layout_alignTop="@+id/formulario_label"
        android:layout_toRightOf="@+id/formulario_label"
        android:layout_alignRight="@+id/formulario_descricaoProduto"
        android:layout_alignEnd="@+id/formulario_descricaoProduto" />

    <TextView
        android:id="@+id/formulario_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/formulario_descricaoProduto"
        android:layout_alignStart="@+id/formulario_descricaoProduto"
        android:layout_below="@+id/formulario_descricaoProduto"
        android:layout_marginTop="19dp"
        android:padding="5dp"
        android:text="@string/RS"
        android:textAlignment="center"
        android:textSize="28sp" />

    <Button
        android:id="@+id/formulario_adicionarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/obs_adicionar" />

    <TextView
        android:id="@+id/formulario_categoriaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/formulario_label"
        android:layout_alignStart="@+id/formulario_label"
        android:layout_below="@+id/formulario_Valor"
        android:layout_marginTop="37dp"
        android:contentDescription="Categoria"
        android:text="@string/categoria"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/formulario_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/formulario_Valor"
        android:layout_alignLeft="@+id/formulario_categoriaLabel"
        android:layout_alignRight="@+id/formulario_Valor"
        android:layout_alignStart="@+id/formulario_categoriaLabel"
        android:layout_below="@+id/formulario_categoriaLabel"
        android:layout_marginTop="10dp"
        android:entries="@array/Categorias" />

</RelativeLayout>
