<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/obs_produtoNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:padding="10dp"
        android:text="@string/productName"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/obs_decription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:padding="10dp"
        android:textSize="16sp"
        android:layout_below="@+id/obs_produtoNome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/obs_obs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/obs_decription"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/obs_decription"
        android:layout_below="@+id/obs_decription"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/obs_obs"
        android:lines="3"
        android:maxLines="3"
        android:selectAllOnFocus="false" />

    <TextView
        android:id="@+id/obs_unitPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/obs_obs"
        android:layout_marginTop="90dp"
        android:padding="5dp"
        android:text="@string/unitPrice"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/obs_unitPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/obs_unitPriceLabel"
        android:layout_alignBottom="@+id/obs_unitPriceLabel"
        android:layout_toEndOf="@+id/obs_unitPriceLabel"
        android:layout_toRightOf="@+id/obs_unitPriceLabel"
        android:text="@string/dinheiroText"
        android:padding="5dp"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/obs_TotalTextValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/dinheiroText"
        android:textSize="24sp"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/obs_TotalTextLabel" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/obs_unitPriceLabel"
        android:layout_marginTop="10dp"
        app:srcCompat="@android:color/black" />

    <ImageView
        android:id="@+id/obs_produtoAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/obs_produtoQuantidade"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/ic_add_black_24dp"
        tools:ignore="VectorDrawableCompat"
        android:layout_alignTop="@+id/obs_produtoQuantidade" />

    <ImageView
        android:id="@+id/obs_produtoRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/obs_unitPriceValue"
        android:layout_toLeftOf="@+id/obs_produtoQuantidade"
        android:layout_toStartOf="@+id/obs_produtoQuantidade"
        app:srcCompat="@drawable/ic_remove_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/obs_produtoQuantidade"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/obs_produtoRemove"
        android:layout_toLeftOf="@+id/obs_produtoAdd"
        android:layout_toStartOf="@+id/obs_produtoAdd"
        android:inputType="number"
        android:text="@string/obs_produtoQuantidade"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/obs_adicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/obs_adicionar" />

    <TextView
        android:id="@+id/obs_TotalTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/totalText"
        android:textSize="24sp"
        android:layout_below="@+id/imageView2"
        android:layout_alignRight="@+id/obs_produtoNome"
        android:layout_alignEnd="@+id/obs_produtoNome" />

</RelativeLayout>