<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.infnet.android.gerenciador_pedidos.PedidoActivity">

    <TextView
        android:id="@+id/pedido_mesaNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/mesa"
        android:textAlignment="center"
        android:textSize="40sp" />

    <Button
        android:id="@+id/pedido_enviarComandaBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/enviarComandaBtn" />

    <TextView
        android:id="@+id/pedido_valorTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pedido_enviarComandaBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/dinheiroText"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/pedido_ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pedido_valorTextLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pedido_mesaNumLabel"
        android:clickable="false"
        android:padding="5dp" />

    <TextView
        android:id="@+id/pedido_totalTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pedido_valorTextLabel"
        android:layout_toLeftOf="@+id/pedido_valorTextLabel"
        android:layout_toStartOf="@+id/pedido_valorTextLabel"
        android:padding="15dp"
        android:text="@string/totalText"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        android:layout_below="@+id/pedido_ListView" />

</RelativeLayout>
