<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/encerrar_mesaNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mesa"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:id="@+id/encerrar_ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/encerrar_valorSubtotalTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/encerrar_mesaNumLabel"
        android:padding="5dp"
        android:listSelector="@drawable/list_selector"
        android:dividerHeight="1dp"
        android:divider="#b5b5b5"/>

    <Button
        android:id="@+id/encerrar_pagamentoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagarBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/encerrar_totalTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/totalText"
        android:textSize="24sp"
        android:layout_below="@+id/imageView"
        android:layout_toLeftOf="@+id/encerrar_valorTotalTextView"
        android:layout_toStartOf="@+id/encerrar_valorTotalTextView" />

    <TextView
        android:id="@+id/encerrar_valorTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/encerrar_pagamentoBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/dinheiroText"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/encerrar_valorTotalTextView"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        app:srcCompat="?attr/dividerHorizontal" />

    <TextView
        android:id="@+id/encerrar_percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/encerrar_valorTotalTextView"
        android:layout_alignLeft="@+id/encerrar_valorSubtotalTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/encerrar_valorSubtotalTextView"
        android:padding="15dp"
        android:text="@string/percentTextView"
        android:textAlignment="viewEnd"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/encerrar_valorSubtotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/encerrar_percentTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/dinheiroText"
        android:textSize="18sp" />

</RelativeLayout>